agent9527-rs/tui/src/history_cell/snapshots/agent9527_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Ran set -o pipefail
  │ cargo test -p
  │ agent9527-tui --quiet
  └ (no output)
