agent9527-rs/tui/src/history_cell/snapshots/agent9527_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────────╮
│ ✨ Update available! 20260727.1.0 -> 9.9.9          │
│ Run pnpm add -g @tkpdx01/agent9527 to update.       │
│                                                     │
│ See full release notes:                             │
│ https://github.com/openai/agent9527/releases/latest │
╰─────────────────────────────────────────────────────╯
