agent9527-rs/tui/src/history_cell/snapshots/agent9527_tui__history_cell__tests__session_header_clamps_to_narrow_width.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&lines).join(\"\\n\")"
---
╭──────────────────────────────────────────╮
│ ⣰⣭⣆ Agent9527 (vtest)                    │
│                                          │
│ model:       gpt-5.6-sol xhigh   fast  … │
│ directory:   project                     │
│ permissions: YOLO mode                   │
╰──────────────────────────────────────────╯
