agent9527-rs/tui/src/history_cell/snapshots/agent9527_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 20260727.4.0 -> 9.9.9                                                                 │
│ Run sh -c 'curl -fsSL https://chatgpt.com/agent9527/install.sh | AGENT9527_NON_INTERACTIVE=1 sh' to        │
│ update.                                                                                                    │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/openai/agent9527/releases/latest                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
