agent9527-rs/tui/src/history_cell/snapshots/agent9527_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 20260727.2.0 -> 9.9.9                                                                 │
│ Run powershell -ExecutionPolicy Bypass -c '$env:AGENT9527_NON_INTERACTIVE=1; irm                           │
│ https://chatgpt.com/agent9527/install.ps1 | iex' to update.                                                │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/openai/agent9527/releases/latest                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
